--- a/ajuda.html
+++ b/ajuda.html
@@ -203,7 +203,7 @@
         
         <div class="footer">
             <p><strong>Muito obrigado por usar nosso app !</strong> 🚀</p>
-            <a href="appviral.html" class="btn" style="background: #2196F3;">↩️ Voltar às Tarefas </a>
+            <a href="index.html" class="btn" style="background: #2196F3;">↩️ Voltar às Tarefas </a>
         </div>
     </div>
 </body>
