--- a/tarefa8.html
+++ b/tarefa8.html
@@ -127,7 +127,7 @@
 
         <div class="task-links">
             <h3 style="text-align: center; margin-bottom: 15px;">📋 Links das Tarefas</h3>
-            <a href="tarefa1.html" class="task-link">💰 Tarefa 1 - APK</a>
+            <a href="index.html" class="task-link">💰 Tarefa 1 install APK</a>
             <a href="tarefa2.html" class="task-link">📝 Tarefa 2 - Cadastro</a>
             <a href="tarefa3.html" class="task-link">👀 Tarefa 3 - Blog</a>
             <a href="tarefa4.html" class="task-link">📚 Tarefa 4 - eBook</a>
