--- a/tarefa8.html
+++ b/tarefa8.html
@@ -132,7 +132,7 @@
             <a href="tarefa3.html" class="task-link">👀 Tarefa 3 - Blog</a>
             <a href="tarefa4.html" class="task-link">📚 Tarefa 4 - eBook</a>
             <a href="tarefa5.html" class="task-link">🚀 Tarefa 5 - Quantum</a>
-            <a href="tarefa6.html" class="task-link">💳 Tarefa 6 - eBook</a>
+            <a href="tarefa6.html" class="task-link">💳 Tarefa 6 apk relógio</a>
             <a href="tarefa7.html" class="task-link">⭐ Tarefa 7</a>
             <a href="tarefa8.html" class="task-link">✅ Tarefa 8 - Final</a>
         </div>
