--- a/ajuda.html
+++ b/ajuda.html
@@ -184,7 +184,7 @@
     </a>
     
     <a href="tarefa6.html" style="display: block; background: #795548; color: white; padding: 12px; border-radius: 8px; text-decoration: none; margin: 8px 0; text-align: center;">
-        💳 Tarefa 6 - eBook
+        💳 Tarefa 6 - apk relógio 
     </a>
     
     <a href="tarefa7.html" style="display: block; background: #FF5722; color: white; padding: 12px; border-radius: 8px; text-decoration: none; margin: 8px 0; text-align: center;">
