--- a/ajuda.html
+++ b/ajuda.html
@@ -163,7 +163,7 @@
 <div style="background: #f8f9fa; padding: 20px; border-radius: 10px; margin: 15px 0;">
     <h3 style="text-align: center; margin-bottom: 15px;">🔗 Links Individuais das Tarefas</h3>
     
-    <a href="tarefa1.html" style="display: block; background: #4CAF50; color: white; padding: 12px; border-radius: 8px; text-decoration: none; margin: 8px 0; text-align: center;">
+    <a href="index.html" style="display: block; background: #4CAF50; color: white; padding: 12px; border-radius: 8px; text-decoration: none; margin: 8px 0; text-align: center;">
         💰 Tarefa 1 - APK
     </a>
     
