--- a/tarefa3.html
+++ b/tarefa3.html
@@ -265,7 +265,7 @@
         }
 
         function abrirBlog() {
-            window.open('https://www.tumblr.com/blog/appdashboard34', '_blank');
+            window.open('https://www.tumblr.com/blog/appdashboard2034', '_blank');
         }
     </script>
 </body>
