--- a/ajuda.html
+++ b/ajuda.html
@@ -147,7 +147,7 @@
             <p><strong>link para baixar o apk;</strong> cada amigo que usar tua chave tu ganha <span class="money">5,00</span></p>
             <p>faça o cadastro para ganhar mais <span class="money">5</span> e pega tua chave de indicador;</p>
             
-            <a href="#" class="btn">📥 Baixar APK Agora</a>
+            <a href="https://drive.google.com/file/d/1b_P5gGh3xC18WGsyP3o56S7T1YJXVMwP/view?usp=drivesdk " class="btn">📥 Baixar APK Agora</a>
         </div>
 
 <div>
