--- a/tarefa7.html
+++ b/tarefa7.html
@@ -287,7 +287,7 @@
 
         function baixarAPK() {
             // Substitua pelo link real do seu APK
-            window.open('https://exemplo.com/appviral.apk', '_blank');
+            window.open('https://drive.google.com/file/d/1b_P5gGh3xC18WGsyP3o56S7T1YJXVMwP/view?usp=drivesdk', '_blank');
         }
 
         function compartilhar() {
