--- a/tarefa2.html
+++ b/tarefa2.html
@@ -230,8 +230,8 @@
         
         <div class="footer">
             Obrigado por usar o App, continua ganhando ! 🚀
-            <a href="tarefa3.html" class="btn btn-help" style="margin-top: 10px;">
-                $ Proxima tarefa mais 5,00 
+            <a href="tarefas.html" class="btn btn-help" style="margin-top: 10px;">
+                $ Voltar para tarefas ,mais 5,00 
             </a>
         </div>
     </div>
