--- a/tarefa3.html
+++ b/tarefa3.html
@@ -173,8 +173,8 @@
         
         <!-- LINK PRÓXIMA TAREFA -->
         <div class="next-task">
-            <a href="tarefa4.html" style="background: #9C27B0; color: white; padding: 15px 30px; text-decoration: none; border-radius: 10px; font-weight: bold; display: inline-block;">
-                🚀 Próxima Tarefa + R$ 5,00
+            <a href="tarefas.html" style="background: #9C27B0; color: white; padding: 15px 30px; text-decoration: none; border-radius: 10px; font-weight: bold; display: inline-block;">
+                🚀 Voltar para tarefas + R$ 5,00
             </a>
         </div>
     </div>
