--- a/ajuda.html
+++ b/ajuda.html
@@ -152,7 +152,7 @@
 
 <div>
 
-<p style="text-align: center; font-weight: bold; margin: 20px 0; color: #d32f2f;">
+<!------  p style="text-align: center; font-weight: bold; margin: 20px 0; color: #d32f2f;">
     ⚠️ Siga rigorosamente a ordem das tarefas para que tu possas receber teu pagamento 
 </p>
 
@@ -193,7 +193,7 @@
     
     <a href="tarefa8.html" style="display: block; background: #009688; color: white; padding: 12px; border-radius: 8px; text-decoration: none; margin: 8px 0; text-align: center;">
         ✅ Tarefa 8 - Final
-    </a>
+    </a  --------->
 </div>
 
 
