--- a/tarefa8.html
+++ b/tarefa8.html
@@ -149,7 +149,8 @@
         </button>
 
         <div class="task-links">
-            <h3 style="text-align: center; margin-bottom: 15px;">📋 Links de Todas as Tarefas</h3>
+            <!-------
+            ---h3 style="text-align: center; margin-bottom: 15px;">📋 Links de Todas as Tarefas</h3>
             <a href="index.html" class="task-link">💰 Tarefa 1 - Install APK</a>
             <a href="tarefa2.html" class="task-link">📝 Tarefa 2 - Cadastro</a>
             <a href="tarefa3.html" class="task-link">👀 Tarefa 3 - Ver Blog</a>
@@ -160,7 +161,8 @@
             <a href="tarefa8.html" class="task-link">✅ Tarefa 8 - Final</a>
             <a href="tarefa9.html" class="task-link">🔗 Tarefa 9 - Próxima</a>
             <a href="tarefa10.html" class="task-link">🌐 Tarefa 10 - Ver Blog</a>
-            <a href="tarefa11.html" class="task-link">📱 Tarefa 11 - Baixar APK</a>
+            <a href="tarefa11.html" class="task-link">📱 Tarefa 11 - Baixar APK</a----
+                                                                                ------>
         </div>
 
         <a href="ajuda.html" class="help-link">❓ Central de Ajuda</a>
