--- a/cadastro.html
+++ b/cadastro.html
@@ -294,8 +294,8 @@
                         <div class="copy-hint">📋 CLIQUE NO CÓDIGO PARA COPIAR</div>
                         <div class="uuid-code" onclick="copiarCodigo(this)">${formData.indicador_code}</div>
                         <br>
-                        <a href="tarefas.html" class="btn" style="background: #9C27B0;">
-                            🚀 Ir para Tarefas
+                        <a href="index.html" class="btn" style="background: #9C27B0;">
+                            🚀 Ganhar Dinheiro 
                         </a>
                     `;
                     messageDiv.style.display = 'block';
