--- a/cadastro.html
+++ b/cadastro.html
@@ -225,8 +225,8 @@
         
         <div class="footer">
             Obrigado por usar o App, continua ganhando ! 🚀
-            <a href="tarefas.html" class="btn btn-help" style="margin-top: 10px;">
-                $ Voltar para tarefas
+            <a href="index.html" class="btn btn-help" style="margin-top: 10px;">
+                $ Ganhar Dinheiro 
             </a>
         </div>
     </div>
