--- a/hidden_panel.html
+++ b/hidden_panel.html
@@ -91,6 +91,14 @@
                 <h3>Tarefas Executadas</h3>
                 <p>Histórico de tarefas concluídas</p>
             </a>
+
+<a href="criar_tarefa_auto.html" class="painel-card">
+                <div class="painel-icon">✅</div>
+                <h3>Criar tarefas</h3>
+                <p>Novas tarefas no system</p>
+</a>
+
+            
         </div>
 
         <!-- BOTÃO VER TAREFAS -->
