--- a/hidden_panel.html
+++ b/hidden_panel.html
@@ -62,7 +62,7 @@
 
         <!-- PAINÉIS DISPONÍVEIS -->
         <div class="painel-links" id="painelLinks" style="display: none;">
-            <a href="painel_appviral.html" class="painel-card">
+            <a href="hidden_appviral.html" class="painel-card">
                 <div class="painel-icon">👥</div>
                 <h3>Usuários Cadastrados</h3>
                 <p>Visualizar todos os usuários do sistema</p>
@@ -92,7 +92,7 @@
                 <p>Histórico de tarefas concluídas</p>
             </a>
 
-<a href="criar_tarefa_auto.html" class="painel-card">
+<a href="criar_tarefas_auto.html" class="painel-card">
                 <div class="painel-icon">✅</div>
                 <h3>Criar tarefas</h3>
                 <p>Novas tarefas no system</p>
