--- a/hidden_panel.html
+++ b/hidden_panel.html
@@ -92,7 +92,7 @@
                 <p>Histórico de tarefas concluídas</p>
             </a>
 
-<a href="criar_tarefas_auto.html" class="painel-card">
+<a href="criar-tarefas-auto.html" class="painel-card">
                 <div class="painel-icon">✅</div>
                 <h3>Criar tarefas</h3>
                 <p>Novas tarefas no system</p>
