--- a/index.html
+++ b/index.html
@@ -185,10 +185,29 @@
 </head>
 <body>
     <div class="container">
-        <div class="logo">
-            <h1>🚀 CICLONE PTC</h1>
-            <p>Ganhe dinheiro completando tarefas simples!</p>
-        </div>
+
+       <div class="figura">
+  <p><b>🚀CICLONE</b></p>
+</div>
+  <style>
+     .figura {
+  width: 111px;
+  height: 111px;
+  background-color: white;
+  border-radius: 50%;
+  color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: arial, sans-serif;
+  box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
+  animation: rotate 3s infinite linear; /* Exemplo de animação */
+} @keyframes rotate { from { transform: rotate(360deg); } 
+  to {  transform: rotate(0deg); } }
+  </style>
+
+
+        
         
         <div class="links-section">
             <a href="cadastro.html" class="link-card">
