--- a/index.html
+++ b/index.html
@@ -206,9 +206,13 @@
 } @keyframes rotate { from { transform: rotate(360deg); } 
   to {  transform: rotate(0deg); } }
   </style>
-
-<a href="" >Ganhar Dinheiro</a>
+<div class="link-icon">💰
+<a href="appviral.html" >Ganhar Dinheiro</a>
+</div>
      
+<div class="link-icon">👤
+<a href="cadastro.html" >Cadastro</a>
+</div> 
  </div>
 
         
