--- a/index.html
+++ b/index.html
@@ -207,10 +207,11 @@
   to {  transform: rotate(0deg); } }
   </style>
  </div>
+        <div align="right">
 <div class="link-icon">💰
 <a href="appviral.html" >Ganhar Dinheiro</a>
     
-<div class="link-icon">👤
+👤
 <a href="cadastro.html" >Cadastro</a>
 </div> </div>
 
