--- a/register.html
+++ b/register.html
@@ -188,7 +188,7 @@
   <a href="#"><i class="fas fa-coins"></i> Ações</a>
   <a href="#"><i class="fas fa-credit-card"></i> Cartão</a>
   <a href="#"><i class="fas fa-file-invoice-dollar"></i> Extrato</a>
-  <a href="#"><i class="fas fa-home"></i> Home</a>
+  <a href="index.html"><i class="fas fa-home"></i> Home</a>
 </nav>
 
 <main>
