--- a/index.html
+++ b/index.html
@@ -342,9 +342,9 @@
   <a href="viewads-botton.html"><i class="fas fa-ad"></i> Ver Anúncios</a>
   <a href="register.html"><i class="fas fa-user-plus"></i> Cadastro</a>
   <a href="login-top.html"><i class="fas fa-sign-in-alt"></i> Login</a>
-  <a href="#"><i class="fas fa-user-circle"></i> Conta</a>
-  <a href="#"><i class="fas fa-chart-line"></i> CDB</a>
-  <a href="#"><i class="fas fa-coins"></i> Ações</a>
+  <a href="https://ciclone-62mq.onrender.com/ "><i class="fas fa-user-circle"></i> CicloneV1</a>
+  <a href="#"><i class="fas fa-chart-line"></i> Suporte24hs</a>
+  <a href="#"><i class="fas fa-coins"></i> Sacar</a>
 </nav>
 
     <!-- HEADER DA PÁGINA -->
