--- a/login-top.html
+++ b/login-top.html
@@ -179,18 +179,18 @@
 <body>
 
 <button class="menu-btn" onclick="toggleMenu()">☰ Menu</button>
-
 <nav class="side-menu" id="menu">
   <a href="index.html"><i class="fas fa-home"></i> Home</a>
+  <a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Painel</a>
+  <a href="estatisticas.html"><i class="fas fa-chart-bar"></i> Estatísticas</a>
+  <a href="viewads-botton.html"><i class="fas fa-ad"></i> Ver Anúncios</a>
   <a href="register.html"><i class="fas fa-user-plus"></i> Cadastro</a>
-  <a href="#"><i class="fas fa-sign-in-alt"></i> Login</a>
-  <a href="#"><i class="fas fa-tachometer-alt"></i> Painel</a>
-  <a href="#"><i class="fas fa-user-circle"></i> Conta</a>
-  <a href="#"><i class="fas fa-chart-line"></i> CDB</a>
-  <a href="#"><i class="fas fa-coins"></i> Ações</a>
-  <a href="#"><i class="fas fa-credit-card"></i> Cartão</a>
-  <a href="#"><i class="fas fa-file-invoice-dollar"></i> Extrato</a>
+  <a href="login-top.html"><i class="fas fa-sign-in-alt"></i> Login</a>
+  <a href="https://ciclone-62mq.onrender.com/ "><i class="fas fa-user-circle"></i> CicloneV1</a>
+  <a href="#"><i class="fas fa-chart-line"></i> Suporte24hs</a>
+  <a href="#"><i class="fas fa-coins"></i> Sacar</a>
 </nav>
+
 
 <main>
   <div class="login-box">
