--- a/login-top.html
+++ b/login-top.html
@@ -191,7 +191,6 @@
   <a href="#"><i class="fas fa-coins"></i> Sacar</a>
 </nav>
 
-
 <main>
   <div class="login-box">
     <h2><i class="fas fa-sign-in-alt"></i> Login CICLONE</h2>
@@ -231,14 +230,14 @@
   const SUPABASE_URL = "https://dpzxdwzlcrerezmloidk.supabase.co";
   const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRwenhkd3psY3JlcmV6bWxvaWRrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjM2NjIxNTksImV4cCI6MjA3OTIzODE1OX0.ls_1EaTrSDpgsiKzInPncJe7myMRkHFY71HiozKqxIY";
 
-  // Criar cliente Supabase
-  const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
-
   function toggleMenu() {
     document.getElementById('menu').classList.toggle('open');
   }
 
   async function fazerLogin() {
+    // CRIAR CLIENTE SUPABASE DENTRO DA FUNÇÃO (CORREÇÃO DO ERRO)
+    const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+    
     const email = document.getElementById('email').value.trim();
     const senha = document.getElementById('senha').value.trim();
 
@@ -258,7 +257,7 @@
         .from('usuarios')
         .select('*')
         .eq('email', email)
-        .eq('senha', senha)  // EM PRODUÇÃO: usar hash/crypt!
+        .eq('senha', senha)
         .single();
 
       // Esconder loading
@@ -286,7 +285,7 @@
         id: data.id,
         nome: data.nome,
         email: data.email,
-        senha: data.senha, // EM PRODUÇÃO: não armazenar senha
+        senha: data.senha,
         chavepix: data.chavepix,
         telefone: data.telefone,
         avatar: data.avatar,
